--- a/web/website1/style1.css
+++ b/web/website1/style1.css
@@ -1,32 +1,51 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
 }
 
 header {
-    background-color: #f2f2f2;
-    padding: 10px 0;
+    background-color: #333;
+    color: #fff;
+    padding: 1em 0;
 }
 
 nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
 }
 
 nav ul li {
-    float: left;
+    display: inline;
+    margin-right: 20px;
 }
 
 nav ul li a {
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
     text-decoration: none;
+    color: #fff;
 }
 
-nav ul li a:hover {
-    background-color: #ddd;
+main {
+    padding: 20px;
+    text-align: center;
 }
 
+h1, h2, p {
+    margin-bottom: 20px;
+}
+
+.destination {
+    margin-bottom: 40px;
+}
+
+.destination img {
+    max-width: 100%;
+    height: auto;
+    border: 2px solid #333; /* Ajout d'une bordure autour des images */
+}
+
+.destination p {
+    color: #777;
+}
